[gd_scene load_steps=30 format=3 uid="uid://bq6uluwx4sxf3"]

[ext_resource type="Script" path="res://World/Objects/Magic/Wind/TornadoProjectile.gd" id="1_d48oj"]
[ext_resource type="Script" path="res://World/Objects/Scripts/Hitbox.gd" id="2_8gvaj"]
[ext_resource type="Texture2D" uid="uid://ikebn4yq3yjf" path="res://Assets/Images/Magic/wind/projectile.png" id="2_b1bax"]
[ext_resource type="AudioStream" uid="uid://cf2jarycewv12" path="res://Assets/Sound/Sound effects/Magic/Wind/tornado.mp3" id="4"]
[ext_resource type="Texture2D" uid="uid://bt8wejlwv77xj" path="res://Assets/Images/Misc/light.png" id="5"]

[sub_resource type="Curve" id="40"]
max_value = 3.0
_data = [Vector2(0.00103413, 1.2973), 0.0, 0.0, 0, 0, Vector2(1, 0.707061), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(0, 0)

[sub_resource type="CircleShape2D" id="41"]
radius = 14.0

[sub_resource type="Animation" id="9"]
resource_name = "fade out"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eddv1"]
_data = {
"fade out": SubResource("9")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ig4d8"]
atlas = ExtResource("2_b1bax")
region = Rect2(224, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tbnd"]
atlas = ExtResource("2_b1bax")
region = Rect2(336, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_e35mn"]
atlas = ExtResource("2_b1bax")
region = Rect2(0, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x6h5"]
atlas = ExtResource("2_b1bax")
region = Rect2(112, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygcsf"]
atlas = ExtResource("2_b1bax")
region = Rect2(224, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6lp1"]
atlas = ExtResource("2_b1bax")
region = Rect2(336, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pd86"]
atlas = ExtResource("2_b1bax")
region = Rect2(0, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjruy"]
atlas = ExtResource("2_b1bax")
region = Rect2(112, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5spi3"]
atlas = ExtResource("2_b1bax")
region = Rect2(0, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_o86oc"]
atlas = ExtResource("2_b1bax")
region = Rect2(112, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8htq5"]
atlas = ExtResource("2_b1bax")
region = Rect2(224, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fe7"]
atlas = ExtResource("2_b1bax")
region = Rect2(336, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cahmf"]
atlas = ExtResource("2_b1bax")
region = Rect2(0, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc7xi"]
atlas = ExtResource("2_b1bax")
region = Rect2(112, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvfp1"]
atlas = ExtResource("2_b1bax")
region = Rect2(224, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmgvh"]
atlas = ExtResource("2_b1bax")
region = Rect2(336, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_37non"]
atlas = ExtResource("2_b1bax")
region = Rect2(0, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyk2g"]
atlas = ExtResource("2_b1bax")
region = Rect2(112, 224, 112, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_6r3pm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig4d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tbnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e35mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x6h5")
}],
"loop": false,
"name": &"end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygcsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6lp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pd86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjruy")
}],
"loop": false,
"name": &"middle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5spi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o86oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8htq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cahmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc7xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvfp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmgvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37non")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyk2g")
}],
"loop": false,
"name": &"start",
"speed": 5.0
}]

[node name="TornadoProjectile" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_d48oj")

[node name="TrailParticles" type="Node2D" parent="."]
position = Vector2(0, 13)

[node name="Particles1" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -16)
emitting = false
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0

[node name="Particles2" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -16)
emitting = false
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
color = Color(0.815686, 0.815686, 0.815686, 1)

[node name="Particles3" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -16)
emitting = false
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="TornadoParticles" type="Node2D" parent="."]
modulate = Color(1.6, 1.6, 1.6, 1)
position = Vector2(-92, -1)

[node name="Particles1" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(98, -55)
emitting = false
amount = 30
lifetime = 2.5
lifetime_randomness = 1.0
local_coords = true
emission_shape = 2
emission_sphere_radius = 32.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
scale_amount_curve = SubResource("40")

[node name="Particles2" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(98, -30)
emitting = false
amount = 30
lifetime = 2.5
lifetime_randomness = 1.0
local_coords = true
emission_shape = 2
emission_sphere_radius = 32.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
scale_amount_curve = SubResource("40")
color = Color(0.815686, 0.815686, 0.815686, 1)

[node name="Particles3" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(98, -45)
emitting = false
amount = 30
lifetime = 2.5
lifetime_randomness = 1.0
local_coords = true
emission_shape = 2
emission_sphere_radius = 32.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
scale_amount_curve = SubResource("40")
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 264192
collision_mask = 0
script = ExtResource("2_8gvaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("41")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eddv1")
}

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(18, -42)
scale = Vector2(0.71875, 0.746094)
energy = 1.1
blend_mode = 2
shadow_enabled = true
texture = ExtResource("5")
texture_scale = 0.75

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1.2, 1.2, 1.2, 1)
position = Vector2(15, -42)
sprite_frames = SubResource("SpriteFrames_6r3pm")
animation = &"end"
